WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
243595
Form Submit incorrect query
https://bugs.webkit.org/show_bug.cgi?id=243595
Summary
Form Submit incorrect query
Ahmad Saleem
Reported
2022-08-05 10:57:28 PDT
Hi Team, Another test case from Chrome bug repository where Safari 15.6 is behaving differently compared to other browsers. Test Case -
https://jsfiddle.net/JUxb5/
Chrome Bug -
https://bugs.chromium.org/p/chromium/issues/detail?id=196640
Chrome Commit -
https://chromium.googlesource.com/chromium/src.git/+/e203f7361d30ddf8260c79733c133a033fcb3b92
____ *** STEPS TO REPRODUCE *** 1) Go to JSFiddle Test Case 2) "Submit" - when the field has AAA in it << ACTUAL RESULT >> Upon Submit, it will open new web page with Google in search of "BBB" << EXPECTED RESULT >> Upon Submit, it will open new web page with Google in search of "AAA" _______ Both other browsers, show "AAA" as search term upon "submit" and then on return, show value "BBB" in the field. Chrome Canary 106 gives error on new page as below: www.google.com is blockedwww.google.com refused to connect. ERR_BLOCKED_BY_RESPONSE Might be cross-origin request block but Firefox Nightly 105 navigates to Google with search term "AAA" rather than "BBB". _____ Appreciate if this can be fixed and aligned with other browsers. Thanks!
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-08-12 10:58:18 PDT
<
rdar://problem/98577265
>
Ahmad Saleem
Comment 2
2023-01-15 05:13:44 PST
Initial Commit -
https://src.chromium.org/viewvc/blink?view=revision&revision=169185
and it pushed the following above:
https://searchfox.org/wubkat/source/Source/WebCore/html/HTMLFormElement.cpp#333
Test Fix -
https://src.chromium.org/viewvc/blink?view=revision&revision=201475
___ Few more commits:
https://chromium.googlesource.com/chromium/src.git/+/f3468bf880d95d79b516ee19cbe6f1807f7e5c61
&
https://chromium.googlesource.com/chromium/src.git/+/e203f7361d30ddf8260c79733c133a033fcb3b92
Anne van Kesteren
Comment 3
2024-09-19 10:37:23 PDT
Related to
bug 13012
perhaps?
Ahmad Saleem
Comment 4
2024-09-19 10:48:14 PDT
(In reply to Anne van Kesteren from
comment #3
)
> Related to
bug 13012
perhaps?
There is open PR here to fix WPT test -
https://github.com/WebKit/WebKit/pull/30734
(against this bug)
EWS
Comment 5
2024-10-20 21:42:48 PDT
Committed
285498@main
(b1875e2b51b3): <
https://commits.webkit.org/285498@main
> Reviewed commits have been landed. Closing PR #30734 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug